Closed Bug 1307749 Opened 8 years ago Closed 8 years ago

Assertion failure: state.filterSourceGraphicTainted == isWriteOnly, at CanvasRenderingContext2D.h:891

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox50 + fixed
firefox51 + fixed
firefox52 --- fixed

People

(Reporter: cbook, Assigned: gw280)

References

()

Details

(Keywords: assertion)

Attachments

(3 files)

Attached file stack
Bughunter found this a lot of times in win7 and win10 tests (so far i'm not able to reproduce on a windows 7 vm) but maybe the stacks rings some bells

Regression/crash range seems from nightly to beta debug builds

bughunter found as example on http://www.cnn.com/2016/09/27/politics/government-shutdown-funding-bill-zika-flint/

Assertion failure: state.filterSourceGraphicTainted == isWriteOnly
George, can you take a look?
Assignee: nobody → gwright
Attached file windows 10 stack
also was hit during topsite tests on nypost.com on windows 10
Flags: needinfo?(gwright)
I think this ought to fix the assertion failure.
Flags: needinfo?(gwright)
Attachment #8799933 - Flags: review?(mstange)
Comment on attachment 8799933 [details] [diff] [review]
0001-Bug-1307749-Ensure-that-we-still-set-filterSourceGra.patch

Review of attachment 8799933 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8799933 - Flags: review?(mstange) → review+
Pushed by gwright@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f87e1eb0de5c
Ensure that we still set filterSourceGraphicTainted and an empty filter when updating our filter in CanvasRenderingContext2D r=mstange
What other branches are affected here? Does this need backport?
Flags: needinfo?(gwright)
It's an assertion failure, so only affects debug builds. I don't think we will need to uplift.
Flags: needinfo?(gwright)
[Tracking Requested - why for this release]:

Well yes affects only debug builds but up to nightly to beta debug builds and so the benefit in uplifting this would be that fixing this could help uncover other bugs where our automation normally runs into this one here.

So i'm pretty much for uplifting :)
https://hg.mozilla.org/mozilla-central/rev/f87e1eb0de5c
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Tracking because it affects Tomcat's work.  George, do you think this should be uplifted, and if so could you fill the uplift request?  Thanks.
Flags: needinfo?(gwright)
Comment on attachment 8799933 [details] [diff] [review]
0001-Bug-1307749-Ensure-that-we-still-set-filterSourceGra.patch

Approval Request Comment
[Feature/regressing bug #]: bug 1307749
[User impact if declined]: testing/integration can crash with debug builds
[Describe test coverage new/current, TreeHerder]: existing tests should cover it, it's intermittent but relatively frequent
[Risks and why]: low risk, we are just ensuring that an assertion condition is always met.
[String/UUID change made/needed]: none
Flags: needinfo?(gwright)
Attachment #8799933 - Flags: approval-mozilla-beta?
Attachment #8799933 - Flags: approval-mozilla-aurora?
Comment on attachment 8799933 [details] [diff] [review]
0001-Bug-1307749-Ensure-that-we-still-set-filterSourceGra.patch

Fixes an assert failure, Aurora51+, Beta50+
Attachment #8799933 - Flags: approval-mozilla-beta?
Attachment #8799933 - Flags: approval-mozilla-beta+
Attachment #8799933 - Flags: approval-mozilla-aurora?
Attachment #8799933 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.